style.css
body {
    font-family: 'Lato', sans-serif;
}

h1 {
    border-bottom: solid 1px lightblue;
    width: 30%;
    margin: auto;
    text-align: center;
    padding: 35px 0;
    font-size: 4rem;
}

.tooltip .tooltiptext {
    display: none;
}

.tooltip:hover .tooltiptext {
    display: block;
    font-size: 0.8rem;
    text-align: center;
    margin: 0 0 -16px 0;
}

button {
    border: none;
    background-color: inherit;
}


@media only screen and (max-width: 700px) {
    h1 {
        width: 100%;
    }
    
    .tooltip:hover .tooltiptext {
        display: none;
    }
}

